--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,4 +1,5 @@
 @use 'variables' as *;
+@use 'sass:color';
 
 // Font face declarations
 @font-face {
@@ -84,4 +85,36 @@ footer {
             text-decoration: none;
         }
     }
+}
+
+// Custom scrollbar styles
+// Webkit browsers (Chrome, Safari, Edge)
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: $white-color;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(91, 146, 121, 0.6);
+    border-radius: 10px;
+    border: 2px solid $white-color;
+    transition: background 0.3s ease;
+
+    &:hover {
+        background: rgba(91, 146, 121, 0.5);
+    }
+
+    &:active {
+        background: rgba(91, 146, 121, 0.7);
+    }
+}
+
+// Firefox
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(91, 146, 121, 0.3) $white-color;
 }
