Voeg border-box toe aan form inputs en wijzig 'Op afspraak' naar 'Openingsuren'

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -417,6 +417,7 @@
         border-radius: 4px;
         font-size: 1rem;
         font-family: inherit;
+        box-sizing: border-box;
         transition: border-color 0.3s ease;
         
         &:focus {
