--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -396,6 +396,35 @@
 
 // Form styles
 .contact__form {
+    .form__hidden {
+        position: absolute;
+        left: -9999px;
+        opacity: 0;
+    }
+    
+    .form__feedback {
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+        border-radius: 4px;
+        font-size: 0.95rem;
+        
+        p {
+            margin: 0;
+        }
+        
+        &--success {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        
+        &--error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
+    }
+    
     .form__group {
         margin-bottom: 1.5rem;
     }
@@ -429,6 +458,11 @@
     .form__textarea {
         resize: vertical;
         min-height: 100px;
+    }
+    
+    button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
     }
 }
 
