--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -383,10 +383,22 @@
         grid-template-columns: 1fr 1fr;
         gap: 4rem;
         margin-top: 2rem;
-        
+
         @media (max-width: 768px) {
             grid-template-columns: 1fr;
             gap: 2rem;
+        }
+    }
+
+    &__form-container {
+        @media (min-width: 769px) {
+            order: 2;
+        }
+    }
+
+    &__info {
+        @media (min-width: 769px) {
+            order: 1;
         }
     }
     
